/*
 * Copyright 2013 Square Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package squareup.proto2.simple;

option java_package = "com.squareup.wire.proto2.simple";

/** A message for testing. */
message SimpleMessage {
  message NestedMessage {
    // An optional int32
    optional int32 bb = 1;
  }

  enum NestedEnum {
    option allow_alias = true;
    FOO = 1;
    BAR = 2;
    BAZ = 3;
    BUZ = 3 [deprecated = true];
  }

  // An optional int32
  optional int32 optional_int32 = 1 [default = 123];
  optional NestedMessage optional_nested_msg = 2;
  optional NestedEnum default_nested_enum = 4 [default = BAZ];
  optional NestedEnum no_default_nested_enum = 5;

  // A required int32
  required int32 required_int32 = 6 [default = 456];

  repeated double repeated_double = 7;

  optional string other = 10;
}
