/*
 * Copyright 2020 Square Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package squareup.proto3.kotlin;

message MapTypes {
  map<string, string> map_string_string = 1;
  map<int32, int32> map_int32_int32 = 2;
  map<sint32, sint32> map_sint32_sint32 = 3;
  map<sfixed32, sfixed32> map_sfixed32_sfixed32 = 4;
  map<fixed32, fixed32> map_fixed32_fixed32 = 5;
  map<uint32, uint32> map_uint32_uint32 = 6;
  map<int64, int64> map_int64_int64 = 7;
  map<sfixed64, sfixed64> map_sfixed64_sfixed64 = 8;
  map<sint64, sint64> map_sint64_sint64 = 9;
  map<fixed64, fixed64> map_fixed64_fixed64 = 10;
  map<uint64, uint64> map_uint64_uint64 = 11;
}
